# electronics_shop

./: classes.py  main.py  pyproject.toml
tests/: test_classes.py
