[tool.poetry]
name = "electronics-shop"
version = "0.1.0"
description = ""
authors = ["mihailkudymov <mike.kudim@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_shop"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

